--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <button id = "login"><img src="Spotify_Primary_Logo_RGB_White.png" class="btn-icon">CONNECT TO SPOTIFY</button> 
     <script>
       const clientId = '836ade30328e4480b154fb66700d6f00';
-      const redirectUri = 'https://mayamunikoti.github.io/Synesthetic';
+      const redirectUri = 'https://mayamunikoti.github.io/Synesthetic/index.html';
       const authUrl = new URL("https://accounts.spotify.com/authorize");
 
       const generateRandomString = (length) => {
