--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
+    <script src="./libraries/p5.min.js"></script>
+    <script src="./libraries/p5.sound.min.js"></script>
   </head>
   <div id="top-right-controls" class="top-controls">
   <!-- Buttons will be inserted by p5.js -->
@@ -20,8 +20,8 @@
   <div class="banner">
     <div class="scrolling-track" id="scrolling-track"></div>
   </div>
-    <script src="sketch.js"></script>
-    <button id = "login"><img src="Spotify_Primary_Logo_RGB_White.png" class="btn-icon">CONNECT TO SPOTIFY</button> 
+    <script src="./sketch.js"></script>
+    <button id = "login"><img src="./Spotify_Primary_Logo_RGB_White.png" class="btn-icon">CONNECT TO SPOTIFY</button> 
     <script>
       const clientId = '836ade30328e4480b154fb66700d6f00';
       const redirectUri = 'https://mayamunikoti.github.io/Synesthetic/';
