--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="./libraries/p5.min.js"></script>
-    <script src="./libraries/p5.sound.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
+
   </head>
   <div id="top-right-controls" class="top-controls">
   <!-- Buttons will be inserted by p5.js -->
