--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <!-- p5.js libraries -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.7.0/addons/p5.sound.min.js"></script>
+    <!-- p5.js libraries in root -->
+    <script src="./p5.min.js"></script>
+    <script src="./p5.sound.min.js"></script>
+
   </head>
 
   <body>
