--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sketch</title>
+
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <!-- p5.js libraries in root -->
+    <!-- p5 libraries (kept as local files like you had) -->
     <script src="./p5.min.js"></script>
     <script src="./p5.sound.min.js"></script>
   </head>
 
   <body>
-    <!-- Top controls div for p5 buttons -->
+    <!-- Top controls wrapper for p5 buttons -->
     <div id="top-right-controls" class="top-controls"></div>
 
     <!-- Banner -->
@@ -20,68 +21,70 @@
       <div class="scrolling-track" id="scrolling-track"></div>
     </div>
 
-    <!-- Spotify button -->
+    <!-- Spotify button (simple HTML button; sketch.js will position it) -->
     <button id="login">
       <img src="./Spotify_Primary_Logo_RGB_White.png" class="btn-icon" alt="spotify">
       CONNECT TO SPOTIFY
     </button>
 
-    <!--
-      Inline script: only PKCE generation + redirect handler.
-      IMPORTANT: do NOT declare global variables here that clash with sketch.js.
-    -->
+    <!-- Inline: PKCE generation + redirect only (no global collisions) -->
     <script>
-      const clientId = '836ade30328e4480b154fb66700d6f00';
-      const redirectUri = 'https://mayamunikoti.github.io/Synesthetic/';
-      const authUrl = new URL("https://accounts.spotify.com/authorize");
+      (function () {
+        const clientId = '836ade30328e4480b154fb66700d6f00';
+        const redirectUri = 'https://mayamunikoti.github.io/Synesthetic/';
+        const authUrlBase = "https://accounts.spotify.com/authorize";
 
-      const generateRandomString = (length) => {
-        const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
-        const values = crypto.getRandomValues(new Uint8Array(length));
-        return values.reduce((acc, x) => acc + possible[x % possible.length], "");
-      };
-
-      const sha256 = async (plain) => {
-        const encoder = new TextEncoder();
-        const data = encoder.encode(plain);
-        return window.crypto.subtle.digest('SHA-256', data);
-      };
-
-      const base64encode = (input) => {
-        return btoa(String.fromCharCode(...new Uint8Array(input)))
-          .replace(/=/g, '')
-          .replace(/\+/g, '-')
-          .replace(/\//g, '_');
-      };
-
-      // generate code_verifier for PKCE and store it before redirect
-      const codeVerifier = generateRandomString(64);
-
-      async function loginWithSpotify() {
-        const hashed = await sha256(codeVerifier);
-        const codeChallenge = base64encode(hashed);
-
-        // store code verifier for later token exchange
-        window.localStorage.setItem('code_verifier', codeVerifier);
-
-        const params = {
-          response_type: 'code',
-          client_id: clientId,
-          scope: 'user-read-currently-playing user-read-playback-state',
-          code_challenge_method: 'S256',
-          code_challenge: codeChallenge,
-          redirect_uri: redirectUri,
+        const generateRandomString = (length) => {
+          const possible = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+          const values = crypto.getRandomValues(new Uint8Array(length));
+          return values.reduce((acc, x) => acc + possible[x % possible.length], "");
         };
 
-        authUrl.search = new URLSearchParams(params).toString();
-        window.location.href = authUrl.toString();
-      }
+        const sha256 = async (plain) => {
+          const encoder = new TextEncoder();
+          const data = encoder.encode(plain);
+          return window.crypto.subtle.digest('SHA-256', data);
+        };
 
-      // attach click handler but DON'T declare loginBtn as a global const
-      document.getElementById('login').onclick = loginWithSpotify;
+        const base64encode = (input) => {
+          return btoa(String.fromCharCode(...new Uint8Array(input)))
+            .replace(/=/g, '')
+            .replace(/\+/g, '-')
+            .replace(/\//g, '_');
+        };
+
+        // Only create verifier when user clicks; keep small memory footprint
+        async function loginWithSpotify() {
+          try {
+            const codeVerifier = generateRandomString(64);
+            const hashed = await sha256(codeVerifier);
+            const codeChallenge = base64encode(hashed);
+
+            window.localStorage.setItem('code_verifier', codeVerifier);
+
+            const params = {
+              response_type: 'code',
+              client_id: clientId,
+              scope: 'user-read-currently-playing user-read-playback-state',
+              code_challenge_method: 'S256',
+              code_challenge: codeChallenge,
+              redirect_uri: redirectUri
+            };
+
+            const authUrl = authUrlBase + "?" + new URLSearchParams(params).toString();
+            window.location.href = authUrl;
+          } catch (err) {
+            console.error("PKCE generation failed:", err);
+          }
+        }
+
+        // attach handler
+        const btn = document.getElementById('login');
+        if (btn) btn.addEventListener('click', loginWithSpotify);
+      })();
     </script>
 
-    <!-- sketch (loads after the inline script above) -->
+    <!-- main sketch (loads after inline script) -->
     <script src="./sketch.js"></script>
   </body>
 </html>
